--- a/src/index.css
+++ b/src/index.css
@@ -7,9 +7,32 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  color: #3c3c3c;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+ul {
+  list-style: none;
+}
+
+html,
+h1,
+h2,
+p,
+ul,
+li,
+a,
+thead,
+tbody,
+tr,
+td {
+  margin: 0;
+  padding: 0;
+}
+table {
+  border-spacing: 1px;
 }
